--- a/html-css/exercicios/ex022/fundo005.html
+++ b/html-css/exercicios/ex022/fundo005.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagem de Fundo</title>
+    <title>Fundo 005</title>
+    <style>
+        body{
+            background-image: url("images/wallpaper003.jpg");
+            background-position: center center;
+        }
+    </style>
 </head>
 <body>
-    <h1>APRENDENDO A USAR O GITHUB NA FACULDADE!</h1>
+    
 </body>
 </html>
