--- a/html-css/exercicios/ex022/fundo006.html
+++ b/html-css/exercicios/ex022/fundo006.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url("images/wallpaper002.jpg");
-            background-position: center right;
-            background-repeat:no-repeat;
-            background-size: cover;
+            background: black url("images/wallpaper002.jpg") center center / cover no-repeat fixed;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +25,8 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum, sequi mollitia. Ut atque quam reiciendis? Vel animi, repellendus, voluptatem provident illo commodi placeat quam doloribus obcaecati officia, vero quasi consectetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus quidem iure, sit consequuntur doloremque accusantium iusto? Quidem quod quasi provident reiciendis totam! Eius quod laborum repellat fugit quidem, sunt molestiae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, qui quidem ad deleniti, debitis minus magni cupiditate tenetur reiciendis enim error, ipsam saepe voluptate. Perspiciatis error doloremque quam accusantium temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui laborum, dicta alias suscipit possimus asperiores praesentium mollitia culpa vero impedit nesciunt sint, architecto maiores veniam aliquam facere et ut nostrum!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum, sequi mollitia. Ut atque quam reiciendis? Vel animi, repellendus, voluptatem provident illo commodi placeat quam doloribus obcaecati officia, vero quasi consectetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus quidem iure, sit consequuntur doloremque accusantium iusto? Quidem quod quasi provident reiciendis totam! Eius quod laborum repellat fugit quidem, sunt molestiae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, qui quidem ad deleniti, debitis minus magni cupiditate tenetur reiciendis enim error, ipsam saepe voluptate. Perspiciatis error doloremque quam accusantium temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui laborum, dicta alias suscipit possimus asperiores praesentium mollitia culpa vero impedit nesciunt sint, architecto maiores veniam aliquam facere et ut nostrum!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum, sequi mollitia. Ut atque quam reiciendis? Vel animi, repellendus, voluptatem provident illo commodi placeat quam doloribus obcaecati officia, vero quasi consectetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus quidem iure, sit consequuntur doloremque accusantium iusto? Quidem quod quasi provident reiciendis totam! Eius quod laborum repellat fugit quidem, sunt molestiae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, qui quidem ad deleniti, debitis minus magni cupiditate tenetur reiciendis enim error, ipsam saepe voluptate. Perspiciatis error doloremque quam accusantium temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui laborum, dicta alias suscipit possimus asperiores praesentium mollitia culpa vero impedit nesciunt sint, architecto maiores veniam aliquam facere et ut nostrum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa, obcaecati molestiae? Facilis, dolore, ex temporibus cum rerum, reiciendis ea magnam nemo omnis saepe deserunt? Dolorem, sequi. Earum totam eligendi perferendis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio esse reiciendis corporis quo incidunt, neque quasi error sed debitis iusto fugiat consequatur eaque harum quibusdam! Numquam praesentium doloremque esse saepe!</p>
     </main>
 </body>
 </html>
