--- a/html-css/desafios/d012/index.html
+++ b/html-css/desafios/d012/index.html
@@ -30,7 +30,7 @@
         </p>
     </section>
 
-    <section class="section-image">
+    <section class="section-image" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -61,7 +61,7 @@
         </p>
     </section>
 
-    <section class="section-image">
+    <section class="section-image" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
